--- a/static/views/login.ejs
+++ b/static/views/login.ejs
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="csrf-token" content="<%= csrfToken %>">
     <title>Firebase Server Login</title>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js" defer ></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-auth.js" defer ></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js" defer ></script>
+
   </head>
   <body>
     <main>
@@ -42,6 +43,7 @@
               event.preventDefault();
               const login = event.target.login.value;
               const password = event.target.password.value;
+              const csrf = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
 
               firebase
                 .auth()
@@ -53,7 +55,7 @@
                       headers: {
                         Accept: "application/json",
                         "Content-Type": "application/json",
-                        "CSRF-Token": Cookies.get("XSRF-TOKEN"),
+                        "CSRF-Token": csrf,
                       },
                       body: JSON.stringify({ idToken }),
                     });
